added new betting tab

--- a/public/css/cmtests-d121fb.webflow.css
+++ b/public/css/cmtests-d121fb.webflow.css
@@ -903,6 +903,15 @@
   display: none;
 }
 
+.container.betting {
+  grid-column-gap: 2em;
+  grid-row-gap: 2em;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 5em 3em;
+  display: none;
+}
+
 .bookmaker-sport {
   width: 100%;
   height: auto;
@@ -2292,7 +2301,7 @@
   width: 100vw;
   height: auto;
   min-height: 100vh;
-  background-color: #333;
+  background-color: #000;
   margin-bottom: 0;
   padding-bottom: 5vh;
   display: flex;
@@ -4505,6 +4514,59 @@
   padding-left: 2em;
   padding-right: 2em;
   display: flex;
+}
+
+.heading-13 {
+  color: #fff;
+  border: 1px #ee746e;
+  border-radius: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  font-family: Montserrat, sans-serif;
+  font-size: 2em;
+  font-weight: 300;
+  line-height: 1.5;
+}
+
+.bettingerordiv {
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
+  border: 1px solid #ee746e;
+  border-radius: .3em;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 2em;
+  display: none;
+}
+
+.requestpermissionbutton {
+  color: #000;
+  background-color: #ee746e;
+  border: 1px solid #000;
+  border-radius: .3em;
+  padding: .5em 1em;
+  font-family: Montserrat, sans-serif;
+  font-size: 1.3em;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.bettingbookmakerrow {
+  width: 100%;
+  justify-content: space-around;
+  display: flex;
+}
+
+.button-6 {
+  color: #74d2e8;
+  background-color: rgba(56, 152, 236, 0);
+  border: 1px solid #74d2e8;
+  border-radius: .3em;
+  font-family: Montserrat, sans-serif;
+  font-size: 1em;
+  font-weight: 700;
+  line-height: 1.5;
 }
 
 @media screen and (max-width: 991px) {
