fixed fund requests

--- a/public/css/cmtests-d121fb.webflow.css
+++ b/public/css/cmtests-d121fb.webflow.css
@@ -4756,7 +4756,8 @@
   border-radius: .3em;
   align-items: center;
   padding: 2em;
-  display: none;
+  display: flex;
+  flex-direction: row;
 }
 
 .usermoneyholder {
