fixed support bug

--- a/public/css/cmtests-d121fb.webflow.css
+++ b/public/css/cmtests-d121fb.webflow.css
@@ -4745,7 +4745,7 @@
 .supportfrholder {
   justify-content: center;
   align-items: center;
-  display: flex;
+  display: none;
 }
 
 .supportfrtemplate {
