--- a/public/css/cmtests-d121fb.webflow.css
+++ b/public/css/cmtests-d121fb.webflow.css
@@ -4333,7 +4333,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1em 2em;
-  display: flex;
+  display: none;
 }
 
 .affiliate_code_box {
