--- a/public/tailwind/styles.css
+++ b/public/tailwind/styles.css
@@ -2269,11 +2269,17 @@ details.collapse summary::-webkit-details-marker {
 .w-\[30\%\] {
   width: 30%;
 }
+.w-\[45\%\] {
+  width: 45%;
+}
 .w-\[60\%\] {
   width: 60%;
 }
 .w-\[80\%\] {
   width: 80%;
+}
+.w-\[90\%\] {
+  width: 90%;
 }
 .w-auto {
   width: auto;
@@ -2284,8 +2290,8 @@ details.collapse summary::-webkit-details-marker {
 .w-screen {
   width: 100vw;
 }
-.basis-1\/3 {
-  flex-basis: 33.333333%;
+.basis-1\/2 {
+  flex-basis: 50%;
 }
 .basis-1\/5 {
   flex-basis: 20%;
@@ -2494,6 +2500,9 @@ details.collapse summary::-webkit-details-marker {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+.opacity-80 {
+  opacity: 0.8;
+}
 .blur {
   --tw-blur: blur(8px);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2537,6 +2546,3 @@ details.collapse summary::-webkit-details-marker {
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
 
-.button-selected {
-  background-color: #09090B;
-}
